<resources>
    <string name="app_name">RU Cafe</string>
    <string name="main_menu_title_string">Main Menu</string>
    <string name="orders_page_title">Current Order Details</string>
    <string name="ordering_coffee_title">Order Coffee</string>
    <string name="ordering_donut_title">Order Donuts</string>
    <string name="store_orders_title">Store Orders</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_donut">Order Donut</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="addins">Addins</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="default_price">$0.00</string>
    <string name="size">Size:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="successfully_added_to_order">Successfully added the item to the order</string>
    <string name="yeast_donut">Yeast Donut</string>
    <string name="cake_donut">Cake Donut</string>
    <string name="donut_holes">Donut Holes</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="current_price">Current Price:</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="total">Total:</string>
    <string name="remove_selected_item">Remove Selected Item</string>
    <string name="place_order">Place Order</string>
    <string name="save_export_order">Save/Export Order</string>
    <string name="remove_selected_order">Remove Selected Order</string>
    <string name="donut_flavor">Donut flavor:</string>
    <string name="donut_type">Donut type:</string>
    <string name="successfully_placed_order">Successfully added order to store orders.</string>
    <string name="successfully_removed_order">Successfully removed order from store orders.</string>
</resources>