<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/store_orders"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:text="@string/store_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_order" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/third"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/main_menu_title_string"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar" />

    <Button
        android:id="@+id/order_coffee"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="120dp"
        android:text="@string/order_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomAppBar" />

    <Button
        android:id="@+id/current_order"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:text="@string/current_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_donut" />

    <Button
        android:id="@+id/order_donut"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:text="@string/order_donut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_coffee" />
</androidx.constraintlayout.widget.ConstraintLayout>